Python data sciences tutos

--- a/Python/Monty_Hall .ipynb
+++ b/Python/Monty_Hall .ipynb
@@ -9,7 +9,7 @@
     "##  __Règles __ du __ jeu __:\n",
     "\n",
     "\n",
-    "Il y a 3 portes l'un d'entre elle cache derrière une voiture et les deux autres une chèvre. On a le choix d'ouvrir une de ces portes. Après avoir effectué notre choix et avant d'ouvrir la porte choisie, le présentateur ouvre une porte avec une chèvre derrière. On demande alors d'effectuer un nouveau choix ou de rester sur le précédent sachant qu'il ne reste que deux portes."
+    "Il y a 3 portes l'une d'entre elles cache derrière une voiture et les deux autres une chèvre. On a le choix d'ouvrir une de ces portes. Après avoir effectué notre choix et avant d'ouvrir la porte choisie, le présentateur ouvre une porte avec une chèvre derrière. On demande alors d'effectuer un nouveau choix ou de rester sur le précédent sachant qu'il ne reste que deux portes."
    ]
   },
   {
@@ -46,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Fonctions\n",
@@ -291,7 +293,9 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "moyenne_garder = []\n",
